# mcp-tutorial

./: .gitignore  CLAUDE.md  README.md
common/: README.md  debugging-mcp-servers.md  mcp-core-concepts.md
exercises/: 1-setup-mcp-servers.md  README.md
node/: 1-nodejs-fundamentals.md  2-npm-npx-basics.md  5-extending-hello-world.md  6-advanced-mcp-patterns.md  README.md  index.js  package-lock.json  package.json
python/: 1-python-fundamentals.md  2-pip-uv-basics.md  5-extending-hello-world.md  6-advanced-mcp-patterns.md  README.md  hello_world_mcp.py  pyproject.toml
