[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-mcp"
version = "1.0.0"
description = "Bernie's first MCP server in Python"
authors = [{name = "Bernie Pruss"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0"
]

[project.scripts]
cdc-mcp = "hello_world_mcp:main"